--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Temperatura Média</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+
 </head>
 
 <body class="bg-secondary">
@@ -30,38 +31,7 @@
             <p id="idP"></p>
         </div>
     </div>
-
-    <script>
-
-        var temperaturas = [27, 29, 31, 35, 27, 29, 26, 31, 32, 28, 27, 29, 31, 35, 27, 29, 26, 31, 32, 28, 27, 29, 31, 35, 27, 29, 26, 31, 32, 28]
-
-        var soma = 0
-
-        for (let i = 0; i < temperaturas.length; i++) {
-            soma += temperaturas[i]
-        }
-
-        var media = soma / 30
-        var entradaTemperatura
-        var telaResposta = document.querySelector("#idP")
-
-        function entradaDeDados() {
-            entradaTemperatura = document.querySelector("#idTemperatura").value
-            console.log(entradaTemperatura)
-            var resultado
-            if (entradaTemperatura <= media) {
-                resultado = "Dentro da média"
-            } else {
-                resultado = "Acima da média"
-            }
-
-            telaResposta.innerHTML = resultado
-
-        }
-
-
-    </script>
-
+    <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
         integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp"
         crossorigin="anonymous"></script>
